# DotMatrix

./: .gitignore  .qmake.stash  CMakeLists.txt  Dot Matrix.sln  DotMatrix.pro  DotMatrix.pro.user.95af6fb  DotMatrix.sln  Makefile  README.md  cpu.cpp  cpu.h  displayWidget.cpp  displayWidget.h  dmWindow.cpp  dmWindow.h  dotmatrixwindow.cpp  dotmatrixwindow.h  dotmatrixwindow.ui  gb.cpp  gbThread.cpp  gbThread.h  gbthread.cpp  gbthread.h  gbwidget.cpp  gbwidget.h  main.cpp  mmu.cpp  mmu.h  palette.cpp  palette.h  palettes.h  ppu.cpp  ppu.h  resource.qrc  resources.qrc
Debug/: DotMatrix.ilk
Dot Matrix/: Dot Matrix.pri  Dot Matrix.pro  Dot Matrix.vcxproj  Dot Matrix.vcxproj.filters  DotMatrix.cpp  DotMatrix.h  DotMatrix.qrc  DotMatrix.ui  GB_CPU.cpp  GB_CPU.h  GB_PPU.cpp  GB_PPU.h  main.cpp  ui_DotMatrix.h
Dot Matrix Testing/: Dot Matrix Testing.vcxproj  test.cpp
DotMatrix/: DotMatrix.aps  DotMatrix.cpp  DotMatrix.rc  DotMatrix.vcxproj  DotMatrix.vcxproj.filters  Form1.Designer.cs  Form1.cs  GBCPU.cs  Program.cs  gb_cpu.cpp  resource.h
DotMatrix/Debug/: DotMatrix.res  vc142.idb
Testing/: Testing.vcxproj  test.cpp
build-Dot Matrix-Desktop_Qt_5_12_6_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
dotmatrix_src/: cpu.cpp  cpu.h  gbwidget.h  ppu.cpp
dotmatrix_test/: cpu_test.cpp
img/: dm_icon.icns
src/: cgb.cpp  cgb.h  controls.cpp  controls.h  cpu.cpp  cpu.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  memory.cpp  memory.h  palette.h  ppu.cpp  ppu.h  timers.cpp  utils.h
src/emulator/: apu.h  (+30 more)
testing/: CMakeLists.txt  cpu_test.cpp
(+77 files in other folders)
